apps/grocy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  labels:
    app: grocy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      volumes:
        - name: grocy-config
          persistentVolumeClaim:
            claimName: grocy-config
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: grocy-config
